--- a/css/styles.css
+++ b/css/styles.css
@@ -154,16 +154,69 @@ main {
   line-height: 70px;
   text-align: center;
 }
+.love-image-png {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 .love-section-img {
   width: 50%;
   position: relative;
 }
+
 .love-section-btn {
   position: absolute;
   bottom: -50px;
   left: -50px;
 }
 
+/* fact section   */
+.fact-section {
+  margin-top: 130px;
+}
+.fact-heading {
+  font-weight: 700;
+  font-size: 45px;
+  line-height: 53px;
+  color: #131313;
+  margin-bottom: 24px;
+}
+.fact-description {
+  color: #727272;
+  margin-bottom: 100px;
+}
+.fact-icon-box {
+  border: 1px solid #ff900e;
+  border-radius: 8px;
+  padding: 50px 30px;
+  text-align: center;
+}
+.fact-box-number {
+  font-weight: 600;
+  font-size: 45px;
+  line-height: 53px;
+  color: #424242;
+}
+.fact-box-description {
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 23px;
+  color: #727272;
+}
+.fact-icons {
+  display: flex;
+  gap: 50px;
+}
+.fact-icon-box {
+  flex-grow: 1;
+}
+.fact-icon-box:hover {
+  background-color: aqua;
+  color: white;
+}
+.fact-icon-box img:hover {
+  transform: rotateZ(180deg);
+}
 /* media query  */
 @media only screen and (max-width: 576px) {
   header {
@@ -226,5 +279,10 @@ main {
     position: absolute;
     bottom: -50px;
     left: 100px;
+  }
+
+  /* fact section  */
+  .fact-icons {
+    flex-direction: column;
   }
 }
