--- a/css/styles.css
+++ b/css/styles.css
@@ -250,7 +250,20 @@ main {
 }
 
 /* footer section  */
-footer 
+footer .container {
+  background: #fff4e7;
+  border-radius: 8px;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.footer-text {
+  text-align: center;
+  font-size: 20px;
+  line-height: 23px;
+  color: #424242;
+}
 /* media query  */
 @media only screen and (max-width: 576px) {
   header {
